# ChangeLog for dev-libs/libaio
# Copyright 1999-2015 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-libs/libaio/ChangeLog,v 1.94 2015/03/09 19:22:19 vapier Exp $

  09 Mar 2015; Mike Frysinger <vapier@gentoo.org> libaio-0.3.110.ebuild:
  Disable frame-pointer usage for arm systems when thumb is enabled.

  02 Mar 2015; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.110.ebuild:
  Stable for ppc, wrt bug #525980

  20 Feb 2015; Mike Frysinger <vapier@gentoo.org> libaio-0.3.110.ebuild:
  Add arm64 love.

  16 Jan 2015; Raúl Porcel <armin76@gentoo.org> libaio-0.3.109-r4.ebuild,
  libaio-0.3.110.ebuild:
  alpha/ia64/m68k/s390/sh/sparc stable wrt #525980

  25 Oct 2014; Markus Meier <maekke@gentoo.org> libaio-0.3.110.ebuild:
  arm stable, bug #525980

  23 Oct 2014; Pacho Ramos <pacho@gentoo.org> libaio-0.3.110.ebuild:
  amd64/x86 stable, bug #525980

  21 Oct 2014; Jeroen Roovers <jer@gentoo.org> libaio-0.3.110.ebuild:
  Stable for HPPA (bug #525980).

*libaio-0.3.110 (27 Mar 2014)

  27 Mar 2014; Mike Frysinger <vapier@gentoo.org>
  +files/libaio-0.3.110-cppflags.patch,
  +files/libaio-0.3.110-optional-werror.patch, +libaio-0.3.110.ebuild:
  Version bump.

*libaio-0.3.109-r5 (27 Mar 2014)

  27 Mar 2014; Mike Frysinger <vapier@gentoo.org> +libaio-0.3.109-r5.ebuild:
  Convert from USE=multilib to multilib-minimal eclass #435094 by Matt Turner.

  16 Mar 2014; Mike Frysinger <vapier@gentoo.org>
  files/libaio-0.3.106-build.patch:
  Drop soname hunk that does not seem to be needed.

  20 Mar 2013; Jeroen Roovers <jer@gentoo.org> metadata.xml:
  Remove useless <description>.

  13 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.109-r4.ebuild:
  Stable for ppc, wrt bug #460704

  11 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.109-r4.ebuild:
  Stable for sh, wrt bug #460704

  10 Mar 2013; Agostino Sarubbo <ago@gentoo.org> libaio-0.3.109-r4.ebuild:
  Stable for s390, wrt bug #460704
